# AndroidChickenTime

./: .gitignore  CMakeLists.txt  README.md  azure-pipelines.yml  build.gradle  build.xml  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/chickenhook/ChickenTimeTestApp/: ActivityHooks.kt  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/chickenhook/ChickenTimeTestApp/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/chickenhook/ChickenTimeTestApp/: ExampleUnitTest.kt
artLibraries/x86/19/: libandroid_runtime.txt  libart.txt
artLibraries/x86/22/: libandroid_runtime.txt  libart.txt
artLibraries/x86_64/27/: libart.txt
artLibraries/x86_64/29/: libart.txt
chickenTime/: CMakeLists.txt  build.gradle
chickenTime/src/androidTest/java/org/chickenhook/chickenTime/: ExampleInstrumentedTest.kt
chickenTime/src/main/: AndroidManifest.xml
chickenTime/src/main/cpp/: interface.cpp
chickenTime/src/main/cpp/artHelper/: ArtPathFinder.cpp  ArtPathFinder.h
chickenTime/src/main/cpp/dlopenBypass/: DlOpenBypass.cpp  DlOpenBypass.h
chickenTime/src/main/cpp/invokeHook/: ArtMethodInvokeHook.cpp  ArtMethodInvokeHook.h  ArtMethodPrettyNameHook.cpp  ArtMethodPrettyNameHook.h
chickenTime/src/main/cpp/logging/: logging.h
chickenTime/src/main/java/org/chickenhook/chickenTime/: NativeInterface.java
chickenTime/src/main/res/values/: strings.xml
chickenTime/src/test/java/org/chickenhook/chickenTime/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
